<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="124dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/drink"
            android:textAlignment="viewStart"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_drink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/drink"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_toEndOf="@id/textView"
            android:textSize="18sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/volume"
        android:inputType="number" />

    <EditText
        android:id="@+id/alcoholPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/alcoholPercentage"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/calories"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:baselineAligned="false"
            android:text="@string/button_delete_drink" />

    </LinearLayout>

</LinearLayout>